# amber

./: .env.example  .gitignore  Dockerfile  FIXES.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README-OLD.md  README.md  pyproject.toml
.claude/: settings.local.json
k8s/: cronjobs.yaml  deployment.yaml
src/amber/: __init__.py  config.py  llm.py  schema.py  service.py
src/amber/models/: __init__.py  state.py
src/amber/routes/: __init__.py  history.py  stream.py  threads.py
src/amber/tools/: __init__.py  code_analysis.py  constitution.py  github_tools.py
src/amber/utils/: __init__.py  message_utils.py
src/amber/workflows/: __init__.py  background.py  chat.py  on_demand.py  scheduled.py  supervisor.py  webhook.py
tests/: __init__.py  test_state.py  test_tools.py
